--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
 altair==5.0.1
+apsw==3.42.0.1
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
@@ -24,8 +25,8 @@ gitdb==4.0.10
 GitPython==3.1.32
 google-auth==2.22.0
 google-auth-oauthlib==1.0.0
+greenlet==2.0.2
 gspread==5.10.0
-gsheetsdb==0.1.13.1
 htbuilder==0.6.1
 httplib2==0.22.0
 idna==3.4
@@ -76,9 +77,11 @@ rich==13.5.2
 rpds-py==0.9.2
 rsa==4.9
 sgmllib3k==1.0.0
+shillelagh==1.2.6
 six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
+SQLAlchemy==2.0.19
 st-annotated-text==4.0.0
 streamlit==1.25.0
 streamlit-camera-input-live==0.2.0
