--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ chardet==5.2.0
 charset-normalizer==3.2.0
 click==8.1.6
 comm==0.2.0
+contourpy==1.1.0
 cssselect==1.2.0
 cssselect2==0.7.0
 cycler==0.11.0
