--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-aiohttp==3.8.5
+aiocache==0.12.2
+aiohttp==3.9.1
 aiosignal==1.3.1
 altair==5.0.1
 annotated-types==0.6.0
@@ -23,8 +24,9 @@ cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.2.0
 click==8.1.6
+colorama==0.4.6
 comm==0.2.0
-contourpy==1.1.0
+contourpy==1.2.0
 cssselect==1.2.0
 cssselect2==0.7.0
 cycler==0.11.0
@@ -32,7 +34,9 @@ debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
 distro==1.8.0
+easy-pil==0.3.3
 et-xmlfile==1.1.0
+exceptiongroup==1.2.0
 executing==2.0.1
 Faker==19.2.0
 fastjsonschema==2.19.0
@@ -59,6 +63,7 @@ idna==3.4
 imgkit==1.2.3
 importlib-metadata==6.8.0
 ipykernel==6.27.1
+ipython==8.20.0
 ipywidgets==8.1.1
 isoduration==20.11.0
 jedi==0.19.1
@@ -85,6 +90,7 @@ kiwisolver==1.4.4
 lxml==4.9.3
 Markdown==3.4.4
 markdown-it-py==3.0.0
+markdown2==2.4.13
 markdownlit==0.0.7
 MarkupSafe==2.1.3
 matplotlib==3.7.2
@@ -112,7 +118,7 @@ pandas==2.0.3
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.9.0
-Pillow==9.5.0
+Pillow==10.1.0
 platformdirs==4.1.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
@@ -140,6 +146,8 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
+pywin32==306
+pywinpty==2.0.12
 PyYAML==6.0.1
 pyzmq==25.1.2
 qtconsole==5.5.1
@@ -183,17 +191,20 @@ tinycss2==1.2.1
 tinysegmenter==0.3
 tldextract==3.4.4
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.14.0
+tweepy==4.14.0
 types-python-dateutil==2.8.19.14
-typing_extensions==4.7.1
+typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==4.3.1
 uri-template==1.3.0
 urllib3==1.26.16
 validators==0.20.0
+watchdog==3.0.0
 wcwidth==0.2.12
 weasyprint==60.2
 webcolors==1.13
