--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+aiohttp==3.11.14
 gspread==5.10.0
 imgkit==1.2.3
 markdown2==2.4.13
 oauth2client==4.1.3
-openai==1.3.7
+openai==0.28.1
 openpyxl==3.1.2
+Pillow==9.5.0
 st-click-detector==0.1.3
 st-clickable-images==0.0.3
 streamlit==1.25.0
